# vfobs

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
charts/vfobs/: .helmignore  Chart.yaml  values.yaml
charts/vfobs/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  externalsecret.yaml  migrate-job.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: IMPLEMENTATION-STATUS.md  README.md  scenario-test-runbook.md
scripts/scenario/: prepare.sh  teardown.sh
scripts/scenario/vtfstub/: Dockerfile  app.py
sdk/python/: pyproject.toml
sdk/python/tests/contract/: test_emitter_envelope.py
sdk/python/tests/integration/: test_emitter_live.py  test_watch_live.py
sdk/python/tests/unit/: test_emitter.py  test_watch_rules.py
sdk/python/vfobs_sdk/: __init__.py  emitter.py  events.py  read_client.py  watch.py
src/vfobs/: __init__.py  config.py  db.py  main.py
src/vfobs/adapters/: __init__.py  dto.py  vtf.py
src/vfobs/api/: auth.py  cost.py  dto.py  events.py  health.py  query.py  read_auth.py  reads.py
src/vfobs/events/: __init__.py  _dispatch.py  base.py  factory.py  schema.py
src/vfobs/events/namespaces/: __init__.py  anomaly.py  gate.py  harness.py  judge.py  task.py  workgraph.py
src/vfobs/middleware/: logging.py
src/vfobs/observability/: metrics_registry.py
src/vfobs/repositories/: __init__.py  event_repository.py
tests/contract/: test_event_schema.py  test_post_events_contract.py  test_reads_contract.py
tests/fixtures/: event_schemas.v1.json  reads_response_shapes.v1.json  scenario-postgres.yaml  scenario-secrets.yaml  scenario-vtfstub.yaml  values-dev.yaml  values-monitoring.yaml  values-scenario.yaml
tests/integration/: conftest.py  test_app_lifecycle.py  test_cost_live.py  test_db_bootstrap.py  test_events_filter_live.py  test_helm_render.py  test_post_events_live.py  test_postgres_event_repository.py  test_reads_live.py  test_vtf_adapter_live.py
tests/scenario/: conftest.py  test_event_roundtrip.py  test_read_api_roundtrip.py
tests/unit/: test_cost.py  test_event_repository.py  test_events.py  test_events_filter.py  test_health.py  test_middleware_logging.py  test_post_events.py  test_read_auth.py  test_reads.py  test_smoke.py  test_vtf_adapter.py
vfobs-sdk-python/: README.md  pyproject.toml
vfobs-sdk-python/tests/: test_smoke.py
