[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vfobs"
version = "0.0.1"
description = "ViloForge pipeline observability service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["vfobs*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -m unit"
markers = [
    "unit: fast, isolated, no I/O (default)",
    "integration: real components — Postgres, HTTP, filesystem",
    "contract: SDK ↔ API + event-schema validation",
    "scenario: full lifecycle, requires kind cluster",
]

[tool.ruff]
line-length = 100
target-version = "py311"
