[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vfobs-sdk-python"
version = "0.1.0"
description = "Typed Python SDK for vfobs — fire-and-forget event Emitter + read helpers"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "jsonschema>=4.0",
]

[project.scripts]
vfobs-watch = "vfobs_sdk.watch:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast, isolated, no I/O",
    "integration: real components — HTTP",
    "contract: emitted-envelope vs WG1 locked schema",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vfobs_sdk*"]
